# transfer

./: .dockerignore  .hgignore  Caddyfile  Dockerfile  Dockerfile.caddy  Makefile  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: continuous_integration.yml
backend/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/tests/: conftest.py  test_file_utils.py
backend/tests/routers/: test_file.py
backend/transfer/: file_utils.py
backend/transfer/routers/: file.py
static/: index.html
static/scripts/: main.js
static/styles/: css  main.css
tests/: test_file_utils.py  test_logging.py
tests/routers/: test_file.py  test_static_files.py
transfer/: config.py  file_utils.py  main.py  resources.py
transfer/routers/: file.py  hello.py
